<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ChangePasswordActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/strMandatoryFieldsMsg" />

        <include layout="@layout/layout_all_mandatory_fields" />

        <LinearLayout
            android:id="@+id/layoutOldPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/drawable_bottom_border"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="*"
                android:textColor="@android:color/holo_red_dark" />

            <EditText
                android:id="@+id/editTextOldPwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#00000000"
                android:hint="Old Password"
                android:inputType="textPassword"
                android:lines="1"
                android:padding="10dp"
                android:textAppearance="?android:textAppearanceSmall" />

            <ImageView
                android:id="@+id/imgViewHideResetOldPwd"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/strPasswordVisibilityLabel"
                android:src="@drawable/ic_show" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/drawable_bottom_border"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="*"
                android:textColor="@android:color/holo_red_dark" />

            <EditText
                android:id="@+id/editTextNewPwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#00000000"
                android:hint="@string/strNewPwdLabel"
                android:inputType="textPassword"
                android:lines="1"
                android:padding="10dp"
                android:textAppearance="?android:textAppearanceSmall" />

            <ImageView
                android:id="@+id/imgViewHideResetPwd"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="0"
                android:contentDescription="@string/strPasswordVisibilityLabel"
                android:src="@drawable/ic_show" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/drawable_bottom_border">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="*"
                android:textColor="@android:color/holo_red_dark" />

            <EditText
                android:id="@+id/editTextNewConfirmPwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/imgViewHideResetCPwd"
                android:layout_toStartOf="@id/imgViewHideResetCPwd"
                android:background="#00000000"
                android:hint="@string/strNewConfirmPwdLabel"
                android:inputType="textPassword"
                android:lines="1"
                android:padding="10dp"
                android:textAppearance="?android:textAppearanceSmall" />

            <ImageView
                android:id="@+id/imgViewHideResetCPwd"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:contentDescription="@string/strPasswordVisibilityLabel"
                android:src="@drawable/ic_show" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/layoutChangePwdBtns"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnChangeCancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/drawable_button_selector"
                android:text="@string/strCancelLabel"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite" />

            <Button
                android:id="@+id/btnChangePwdSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@drawable/drawable_button_selector"
                android:text="@string/strSubmitLabel"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite" />

        </LinearLayout>

    </LinearLayout>

    <include layout="@layout/layout_progress_bar" />

</RelativeLayout>
